--- a/examples/clusters/index.html
+++ b/examples/clusters/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="app.css" />
   </head>
   <body>
-    <div id="map"></div>
+	<div id="root" onclick="console.log('clicked')">
+		<div id="map"></div>
+	</div>
     <script src='app.js'></script>
   </body>
   <script type="text/javascript">
